fix alignment issue (attempt5)

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     font-family: "MyFont", sans-serif;
     padding: 20px;
     border-bottom: 2px solid;
+    align-items: center;
 }
 
 header h1 {
@@ -192,6 +193,7 @@ ul {
     padding: 0;
     overflow: auto;
     justify-items: center;
+    justify-content: center;
 }
 
 ul li {
@@ -266,6 +268,7 @@ footer {
     }
 
 }
+
 
 
 
